<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.WorkDetailFragment">

    <ScrollView
        android:id="@+id/work_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_add_to_worklist"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/add"
                app:icon="@android:drawable/ic_input_add"
                app:iconSize="33dp"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/workAuthor"
                app:layout_constraintTop_toBottomOf="@+id/workAuthor" />

            <Button
                android:id="@+id/btn_favorite"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favText"
                app:icon="@android:drawable/btn_star_big_on"
                app:iconSize="33dp"
                app:iconTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/workAuthor"
                app:layout_constraintTop_toBottomOf="@+id/workAuthor" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/workCover"
                    android:layout_width="200dp"
                    android:layout_height="350dp"
                    android:contentDescription="@string/coverText"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/el_imperio_final" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/workTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/titleText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/workAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/authorText"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="@+id/workTitle"
                app:layout_constraintStart_toStartOf="@+id/workTitle"
                app:layout_constraintTop_toBottomOf="@+id/workTitle" />

            <ImageView
                android:id="@+id/starImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="150dp"
                android:contentDescription="@string/starText"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/workRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="8dp"
                android:text="@string/ratingText"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/starImage"
                app:layout_constraintTop_toTopOf="@+id/starImage" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                style="@style/Base.Theme.OpenBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                app:cardCornerRadius="16dp"
                app:contentPadding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workRating">

                <TextView
                    android:id="@+id/workDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/work_detail_spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_worklist_list"
        style="@style/recyclerViewStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>